<resources>
    <string name="app_name">TWTQuestionaire</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- main -->
    <string name="main_title">TWT编辑后台</string>
    <string name="main_search_query_hint">请输入搜索内容</string>
    <string name="main_questionaire">新建问卷</string>
    <string name="main_vote">新建投票</string>
    <string name="main_quiz">新建答题</string>
    <string name="main_created">我创建的</string>
    <string name="main_participated">我参与的</string>
    <string name="main_trash">回收站</string>
    <string name="main_star">查看标星</string>
    <string name="little_star">*</string>

    <!-- questionaire -->
    <string name="new_questionaire_title">问卷名称</string>
    <string name="new_questionaire_description">问卷说明</string>
    <string name="new_questionaire_begin">开始时间</string>
    <string name="new_questionaire_end">结束时间</string>
    <string name="new_questionaire_title_hint">输入问卷名称</string>
    <string name="new_questionaire_description_hint">输入问卷说明</string>
    <string name="date_picker_hint">请选择日期</string>
    <string name="new_questionaire_create_btn">创建问卷</string>
    <string name="questionaire_info">这只问卷没有说明哟</string>
    <string name="q1_e_toolbar_preview">预览</string>
    <string name="q1_e_add_item_button">添加题目</string>
    <string name="q1_e_type_selection_single">单选题</string>
    <string name="q1_e_type_selection_multiple">多选题</string>
    <string name="q1_e_type_selection_blank">填空题</string>
    <string name="q1_e_type_selection_paragraph">段落题</string>
    <string name="q1_e_type_selection_rating">量表题</string>
    <string name="q1_e_type_selection_sort">排序题</string>
    <string name="q1_e_type_selection_import">批量导入</string>
    <string name="q1_e_single_appearance_text">题面</string>
    <string name="q1_e_single_input_question">请输入问题</string>
    <string name="q1_e_single_input_option">请输入选项</string>
    <string name="q1_e_single_add_option">添加选项</string>
    <string name="q1_e_more_settings_text">更多设置</string>
    <string name="q1_e_single_option_edit">请输入选项</string>
    <string name="q1_e_single_answer_text">设置答案</string>
    <string name="q1_e_single_score_text">设置分值</string>
    <string name="q1_e_rating_score_text">最高分值</string>
    <string name="q1_e_single_compulsion_text">是否必答</string>
    <string name="q1_e_single_condition_text">显示条件</string>
    <string name="q1_e_single_jump_text">跳转设置</string>
    <string name="q1_e_single_toolbar_create">创建</string>
    <string name="q1_e_rating_style_text">选择样式</string>
    <string name="q1_e_settled">已设置</string>
    <string name="q1_e_unsettled">未设置</string>

    <!-- vote -->
    <string name="new_vote_title">投票名称</string>
    <string name="new_vote_description">投票说明</string>
    <string name="new_vote_begin">开始时间</string>
    <string name="new_vote_end">结束时间</string>
    <string name="new_vote_title_hint">输入投票名称</string>
    <string name="new_vote_description_hint">输入投票说明</string>
    <string name="new_vote_create_btn">创建投票</string>

    <!-- quiz -->
    <string name="new_quiz_title">答题名称</string>
    <string name="new_quiz_description">答题说明</string>
    <string name="new_quiz_begin">开始时间</string>
    <string name="new_quiz_end">结束时间</string>
    <string name="new_quiz_title_hint">输入答题名称</string>
    <string name="new_quiz_description_hint">输入答题说明</string>
    <string name="new_quiz_create_btn">创建答题</string>
</resources>
