<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionaire.NewQuestionaireActivity">

    <include
        android:id="@+id/new_questionaire_toolbar"
        layout="@layout/common_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_questionaire_toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="131dp">

        <TextView
            android:id="@+id/new_questionaire_title_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_questionaire_title"
            android:textColor="@color/new_text"
            android:textSize="@dimen/new_questionaire_text_size"
            app:layout_constraintBottom_toTopOf="@id/new_questionaire_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_questionaire_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/new_questionaire_title_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintLeft_toRightOf="@id/new_questionaire_compulsion"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_questionaire_title_hint" />

        <ImageView
            android:id="@+id/new_questionaire_compulsion"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="compulsion"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toTopOf="@id/new_questionaire_description_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/new_questionaire_title"
            app:layout_constraintTop_toBottomOf="@id/new_questionaire_title_hint" />

        <TextView
            android:id="@+id/new_questionaire_description_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_questionaire_description"
            android:textColor="@color/new_text"
            android:textSize="@dimen/new_questionaire_text_size"
            app:layout_constraintBottom_toTopOf="@id/new_questionaire_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_questionaire_title" />

        <EditText
            android:id="@+id/new_questionaire_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_questionaire_description_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/new_questionaire_description_hint" />

        <TextView
            android:id="@+id/new_questionaire_begin_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_questionaire_begin"
            android:textColor="@color/new_text"
            android:textSize="@dimen/new_questionaire_text_size"
            app:layout_constraintBottom_toTopOf="@id/new_questionaire_begin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_questionaire_description" />

        <EditText
            android:id="@+id/new_questionaire_begin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_picker_hint"
            android:importantForAutofill="no"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@id/new_questionaire_end_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_questionaire_begin_hint" />

        <TextView
            android:id="@+id/new_questionaire_end_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_questionaire_end"
            android:textColor="@color/new_text"
            android:textSize="@dimen/new_questionaire_text_size"
            app:layout_constraintBottom_toTopOf="@id/new_questionaire_end"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_questionaire_begin" />

        <EditText
            android:id="@+id/new_questionaire_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_picker_hint"
            android:importantForAutofill="no"
            android:inputType="none"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_questionaire_end_hint" />

        <Button
            android:id="@+id/new_questionaire_create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_questionaire_create_btn"
            app:layout_constraintTop_toBottomOf="@id/new_questionaire_end" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>