<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vote.NewVoteActivity">

    <include
        android:id="@+id/new_vote_toolbar"
        layout="@layout/common_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_vote_toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="131dp">

        <TextView
            android:id="@+id/new_vote_title_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/new_vote_title"
            android:textColor="@color/new_text"
            android:textSize="@dimen/new_questionaire_text_size"

            app:layout_constraintBottom_toTopOf="@id/new_vote_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_vote_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/edit_text_selector"
            android:elevation="5dp"
            android:hint="@string/new_vote_title_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_vote_title_hint" />

        <!--        <ImageView-->
        <!--            android:id="@+id/new_vote_compulsion"-->
        <!--            android:layout_width="25dp"-->
        <!--            android:layout_height="25dp"-->
        <!--            android:contentDescription="compulsion"-->
        <!--            android:src="@mipmap/ic_launcher_round"-->
        <!--            app:layout_constraintBottom_toTopOf="@id/new_vote_description_hint"-->
        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
        <!--            app:layout_constraintRight_toLeftOf="@id/new_vote_title"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/new_vote_title_hint" />-->

        <TextView
            android:id="@+id/new_vote_description_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/new_vote_description"
            android:textColor="@color/new_text"
            android:textSize="@dimen/new_questionaire_text_size"
            app:layout_constraintBottom_toTopOf="@id/new_vote_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_vote_title" />

        <EditText
            android:id="@+id/new_vote_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/edit_text_selector"
            android:elevation="5dp"
            android:hint="@string/new_vote_description_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/new_vote_description_hint" />

        <TextView
            android:id="@+id/new_vote_begin_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/new_vote_begin"
            android:textColor="@color/new_text"
            android:textSize="@dimen/new_questionaire_text_size"
            app:layout_constraintBottom_toTopOf="@id/new_vote_begin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_vote_description" />

        <EditText
            android:id="@+id/new_vote_begin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/edit_text_selector"
            android:elevation="5dp"
            android:hint="@string/date_picker_hint"
            android:importantForAutofill="no"
            android:inputType="date"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/new_vote_end_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_vote_begin_hint" />

        <TextView
            android:id="@+id/new_vote_end_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/new_vote_end"
            android:textColor="@color/new_text"
            android:textSize="@dimen/new_questionaire_text_size"
            app:layout_constraintBottom_toTopOf="@id/new_vote_end"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_vote_begin" />

        <EditText
            android:id="@+id/new_vote_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/edit_text_selector"
            android:elevation="5dp"
            android:hint="@string/date_picker_hint"
            android:importantForAutofill="no"
            android:inputType="none"
            android:padding="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_vote_end_hint" />

        <Button
            android:id="@+id/new_vote_create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="86dp"
            android:layout_marginVertical="27.5dp"
            android:background="@drawable/button_shape"
            android:elevation="5dp"
            android:text="@string/new_vote_create_btn"
            android:textColor="#FFF"
            android:textSize="@dimen/new_questionaire_text_size"
            app:layout_constraintTop_toBottomOf="@id/new_vote_end" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>