<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    This is main layout of the q1_p_activity-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/main_drawerlayout_questionaire"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/main_card_background"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toTopOf="@id/main_drawerlayout_quiz"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/main_drawerlayout_vote"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_questionaire"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_drawerlayout_vote"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/main_card_background"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toTopOf="@id/main_drawerlayout_created"
            app:layout_constraintLeft_toRightOf="@id/main_drawerlayout_questionaire"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_vote"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_drawerlayout_quiz"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/main_card_background"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toTopOf="@id/main_drawerlayout_participated"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/main_drawerlayout_created"
            app:layout_constraintTop_toBottomOf="@id/main_drawerlayout_questionaire">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_quiz"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_drawerlayout_created"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/main_card_background"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toTopOf="@id/main_drawerlayout_trash"
            app:layout_constraintLeft_toRightOf="@id/main_drawerlayout_quiz"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_drawerlayout_vote">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_created"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_drawerlayout_participated"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/main_card_background"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/main_drawerlayout_trash"
            app:layout_constraintTop_toBottomOf="@id/main_drawerlayout_quiz">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_participated"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_drawerlayout_trash"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/main_card_background"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/main_drawerlayout_participated"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_drawerlayout_created">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_trash"
                android:textColor="@color/main_text"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    This is the layout of side menu-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <ListView
            android:id="@+id/main_drawerlayout_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>